# PythonImageViewer

./: .gitignore  PythonImageViewer.py  PythonImageViewer.spec  pyproject.toml  readme.md  requirements.txt
python_image_viewer/: main.py
